<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RL_Title_Question_Content"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
	<ImageView
		android:id="@+id/iv_table"
		android:layout_width="300dp"
		android:layout_height="180dp"
		android:layout_centerHorizontal="true"
		/>
    <LinearLayout
        android:id="@+id/title_question_content_sound_switch"
		android:layout_below="@id/iv_table"
        android:layout_width="35dp"
        android:layout_height="28dp"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
		android:orientation="vertical"
		android:visibility="invisible"/>

	<RelativeLayout 
	    android:id="@+id/RL_Question"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
		android:layout_below="@id/iv_table"
	    android:layout_toRightOf="@id/title_question_content_sound_switch"
	    android:paddingLeft="10dp"
	    android:layout_marginRight="10dp">
	    <com.iyuba.toeiclistening.widget.subtitle.TextPage
            android:id="@+id/title_question_title"
            style="@style/QuestionTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/text7"
           	android:background="@android:color/transparent"
           	android:textStyle="bold"/>
	    <LinearLayout 
	        android:id="@+id/Title_Question_Content_Option"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_question_title"
            android:paddingTop="10dp"
            android:background="@android:color/transparent"
            android:orientation="vertical">         
        </LinearLayout>
	</RelativeLayout>
	
	<RelativeLayout 
	    android:id="@+id/rel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center_horizontal"
        android:layout_below="@id/RL_Question">
        <LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:orientation="vertical"
            android:id="@+id/question_content_image">"
        </LinearLayout>
    </RelativeLayout>
	
	<LinearLayout 
	    android:id="@+id/LL_Answer_Option_1"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/rel"
	    android:gravity="center"
	    android:orientation="horizontal"
	    android:paddingTop="3dp"
	    android:paddingBottom="5dp"
	    android:layout_marginLeft="15dp"
	    android:layout_marginRight="15dp"
	    android:layout_marginTop="10dp">
	    <RelativeLayout 
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:layout_weight="1">
	        <Button 
	            android:id="@+id/title_question_content_option_A"
	            android:layout_width="80dp"
	            android:layout_height="35dp"
	            android:layout_centerInParent="true"
	            android:background="@drawable/shape_option"
	            android:text="@string/A"
	            style="@style/OptionButton"/>
	    </RelativeLayout>
	    
	    <RelativeLayout 
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:layout_weight="1">
	        <Button 
	            android:id="@+id/title_question_content_option_B"
	            android:layout_width="80dp"
	            android:layout_height="35dp"
	            android:layout_centerInParent="true"
	            android:background="@drawable/shape_option"
	            android:text="@string/B"
	            style="@style/OptionButton"/>
	    </RelativeLayout>
	    
	    <RelativeLayout 
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:layout_weight="1">
	        <Button 
	            android:id="@+id/title_question_content_option_C"
	            android:layout_width="80dp"
	            android:layout_height="35dp"
	            android:layout_centerInParent="true"
	            android:background="@drawable/shape_option"
	            android:text="@string/C"
	            style="@style/OptionButton"/>
	    </RelativeLayout>
	    
	    <RelativeLayout 
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:layout_weight="1">
	        <Button 
	            android:id="@+id/title_question_content_option_D"
	            android:layout_width="80dp"
	            android:layout_height="35dp"
	            android:layout_centerInParent="true"
	            android:background="@drawable/shape_option"
	            android:text="@string/D"
	            style="@style/OptionButton"/>
	    </RelativeLayout>
	</LinearLayout>
	<LinearLayout 
	    android:id="@+id/LL_Answer_Option_2"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/LL_Answer_Option_1"
	    android:orientation="horizontal"
	    android:layout_marginTop="5dp"
	    android:layout_marginLeft="15dp"
	    android:layout_marginRight="15dp"
	    android:layout_marginBottom="20dp">
	    <RelativeLayout 
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:layout_weight="1">
	        <Button 
	            android:id="@+id/title_question_content_option_E"
	            android:layout_width="80dp"
	            android:layout_height="35dp"
	            android:layout_centerInParent="true"
	            android:background="@drawable/shape_option"
	            android:text="@string/E"
	            android:visibility="gone"
	            style="@style/OptionButton"/>
	    </RelativeLayout>
	    <RelativeLayout 
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:layout_weight="1">
	        <Button 
	            android:id="@+id/title_question_content_option_F"
	            android:layout_width="80dp"
	            android:layout_height="35dp"
	            android:layout_centerInParent="true"
	            android:background="@drawable/shape_option"
	            android:text="@string/F"
	            android:visibility="gone"
	            style="@style/OptionButton"/>
	    </RelativeLayout>
	    <RelativeLayout 
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:layout_weight="1">
	        <Button 
	            android:id="@+id/title_question_content_option_G"
	            android:layout_width="80dp"
	            android:layout_height="35dp"
	            android:layout_centerInParent="true"
	            android:background="@drawable/shape_option"
	            android:text="@string/G"
	            android:visibility="gone"
	            style="@style/OptionButton"/>
	    </RelativeLayout>
	    <RelativeLayout 
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:layout_weight="1">
	        <Button 
	            android:id="@+id/title_question_content_option_H"
	            android:layout_width="80dp"
	            android:layout_height="35dp"
	            android:layout_centerInParent="true"
	            android:background="@drawable/shape_option"
	            android:text="@string/H"
	            android:visibility="gone"
	            style="@style/OptionButton"/>
	    </RelativeLayout>
	</LinearLayout>
</RelativeLayout>
